I added some margins in the top section and navigation bar.  I also fixed the alignment On the Lambda school logo.

--- a/css/about.css
+++ b/css/about.css
@@ -89,17 +89,15 @@ p {
 }
 header nav a {
     text-decoration: none;
-   /* border: 1px solid red;*/
+  /*  border: 1px solid red;*/
     color: black;
-    text-deco
 }
 header nav {
-   /* border: 1px solid red;*/
+  /*  border: 1px solid red;*/
     width: 70%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
+    padding-top: 25px;
     font-size: 14px;
 }
 .top-content {
